# PrecisionDoc

./: .env.example  .gitignore  README.md  env.example  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
config/: config.py
examples/: example.py
precisiondoc/: __init__.py
precisiondoc/ai/: ai_client.py  qwen_api.py
precisiondoc/config/: models.py
precisiondoc/pdf/: pdf_processor.py  pdf_utils.py
precisiondoc/utils/: __init__.py  data_utils.py  word_utils.py
precisiondoc/utils/word/: __init__.py  content_formatting.py  document_formatting.py  evidence_processing.py  export_utils.py  image_utils.py  table_utils.py
tests/: test_api_examples.py  test_local_qwen.py  test_pdf_processing.py
