[project]
name = "pdf_processor"
version = "0.1.0"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "distro==1.9.0",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.10.0",
    "multidict==6.6.3",
    "numpy==2.3.1",
    "openai==1.96.1",
    "openpyxl>=3.1.5",
    "pandas==2.3.1",
    "propcache==0.3.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pymupdf==1.26.3",
    "python-docx>=1.2.0",
    "pytz==2025.2",
    "requests==2.31.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "yarl==1.20.1",
]
